--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity 7: Exploring Bootstrap</title>
+    <link rel="icon" type="image/x-icon" href="Images\favicon.ico">
 </head>
 <body>
     <header>
-        
+
     </header>
 </body>
 </html>
