--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light">
             <div class="container-fluid">
               <a class="navbar-brand fw-bold" href="#"> MATS</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,17 +36,21 @@
           </nav>
     </header>
 
-
+<section>
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://webdevelop.pro/images/blog/simple-short-best-html-practice.jpeg" class="d-block w-100" alt="HTML logo">
+            <img src="https://webdevelop.pro/images/blog/simple-short-best-html-practice.jpeg" 
+            class="d-block w-100" alt="HTML logo">
+            
           </div>
           <div class="carousel-item">
-            <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--pCsWxkTW--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/yqqzlq4ua6rf3rv06bvc.png" class="d-block w-100" alt="CSS Logo">
+            <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--pCsWxkTW--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/yqqzlq4ua6rf3rv06bvc.png" 
+            class="d-block w-100" alt="CSS Logo">
           </div>
           <div class="carousel-item">
-            <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" class="d-block w-100" alt="Bootstrap">
+            <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" 
+            class="d-block w-100" alt="Bootstrap">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -58,6 +62,32 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+</section>
+<br>
+<br>
+      <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="card text-bg-primary mb-3 col-4" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                      <h5 class="card-title">Primary card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div></div>
+                    <div class="card text-bg-primary mb-3 col-4" style="max-width: 18rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Primary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div></div>
+                        <div class="card text-bg-primary mb-3 col-4 p" style="max-width: 18rem;">
+                            <div class="card-header">Header</div>
+                            <div class="card-body">
+                              <h5 class="card-title">Primary card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div></div>
+        </div>
+      </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
