--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         </button>
       </div>
 </section>
-<br>
-<br>
+<p> <strong>A front-end developer</strong> is a type of software developer who specializes in creating and designing the user interface (UI) and user experience (UX) of websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient.</p>
       <main>
         <div class="container-fluid">
             <div class="row">
