--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand fw-bold" href="#"> MATS</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
