--- a/index.html
+++ b/index.html
@@ -63,31 +63,43 @@
         </button>
       </div>
 </section>
-<p> <strong>A front-end developer</strong> is a type of software developer who specializes in creating and designing the user interface (UI) and user experience (UX) of websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient.</p>
-      <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="card text-bg-primary mb-3 col-4" style="max-width: 50rem;">
-                    <div class="card-header">Header</div>
+<section>
+  <p> <strong>A front-end developer</strong> is a type of software developer who specializes in creating and designing the user interface (UI) and user experience (UX) of 
+    websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient.
+  </p></section>
+     
+  <Section><main>
+    <div class="container-fluid">
+        <div class="row">
+          <div></div>
+            <div class=" mb-3 col-4" style="max-width: 25rem;">
+                <div class="card-body">
+                  <img src="https://webdevelop.pro/images/blog/simple-short-best-html-practice.jpeg" 
+                  class="d-block w-100" alt="HTML logo">
+                  <p class="card-text"> is the standard markup language for Web pages.</p>
+                  <br>
+                  <br>
+                <p><a href="https://www.w3schools.com/html/default.asp" class="btn btn-white border border-4 fw-bold">Learn more!</a></p>
+                </div>
+              </div>
+                <div class=" mb-3 col-4" style="max-width: 25rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Primary card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--pCsWxkTW--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/yqqzlq4ua6rf3rv06bvc.png" 
+                      class="d-block w-100" alt="CSS Logo">
+                      <p class="card-text"><strong>CSS</strong> stands for Cascading Style Sheets. CSS describes how HTML elements are to be displayed on screen, paper, or in other media.</p>
+                      <p><a href="https://www.w3schools.com/css/default.asp" class="btn btn-white border border-4 fw-bold">Learn more!</a></p>
                     </div></div>
-                    <div class="card text-bg-primary mb-3 col-4" style="max-width: 50rem;">
-                        <div class="card-header">Header</div>
+                    <div class=" mb-3 col-4 p" style="max-width: 25rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Primary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div></div>
-                        <div class="card text-bg-primary mb-3 col-4 p" style="max-width: 50rem;">
-                            <div class="card-header">Header</div>
-                            <div class="card-body">
-                              <h5 class="card-title">Primary card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                          <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" 
+            class="d-block w-100" alt="Bootstrap">
+                          <p class="card-text">Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
+                          <p><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" class="btn btn-white border border-4 fw-bold ">Learn more!</a></p>
                         </div>
-        </div>
-      </main>
+                    </div>
+                  </div>
+                </main>
+</Section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
