--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+  <!-- Navbar Section -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light fixed-top">
             <div class="container-fluid">
@@ -35,7 +36,7 @@
             </div>
           </nav>
     </header>
-
+<!-- Carousel Section -->
 <section>
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
@@ -63,11 +64,12 @@
         </button>
       </div>
 </section>
+
 <section>
   <p> <strong>A front-end developer</strong> is a type of software developer who specializes in creating and designing the user interface (UI) and user experience (UX) of 
     websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient.
   </p></section>
-     
+     <!-- Cards Section -->
   <Section><main>
     <div class="container-fluid">
         <div class="row">
@@ -100,6 +102,7 @@
                   </div>
                 </main>
 </Section>
+<!-- Footer Section -->
 <footer>
   <div class="text-center bg-light border border-4">
     <p>&#169; <strong> 2023 DevMarj-All Rights Reserved.</strong></p>
