--- a/index.html
+++ b/index.html
@@ -42,23 +42,25 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="https://webdevelop.pro/images/blog/simple-short-best-html-practice.jpeg" 
-            class="d-block w-100" alt="HTML logo">
-            
+            class="d-block w-100" alt="HTML logo">    
           </div>
+
           <div class="carousel-item">
-            <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--pCsWxkTW--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/yqqzlq4ua6rf3rv06bvc.png" 
+          <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--pCsWxkTW--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/yqqzlq4ua6rf3rv06bvc.png" 
             class="d-block w-100" alt="CSS Logo">
           </div>
+
           <div class="carousel-item">
             <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" 
             class="d-block w-100" alt="Bootstrap">
           </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -70,7 +72,8 @@
     websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient.
   </p></section>
      <!-- Cards Section -->
-  <Section><main>
+  <Section>
+    <main>
     <div class="container-fluid">
         <div class="row">
           <div></div>
@@ -90,11 +93,11 @@
                       class="d-block w-100" alt="CSS Logo">
                       <p class="card-text"><strong>CSS</strong> stands for Cascading Style Sheets. CSS describes how HTML elements are to be displayed on screen, paper, or in other media.</p>
                       <p><a href="https://www.w3schools.com/css/default.asp" class="btn btn-white border border-4 fw-bold">Learn more!</a></p>
-                    </div></div>
+                    </div>
+                  </div>
                     <div class=" mb-3 col-4 p" style="max-width: 25rem;">
                         <div class="card-body">
-                          <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" 
-            class="d-block w-100" alt="Bootstrap">
+                          <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" class="d-block w-100" alt="Bootstrap">
                           <p class="card-text">Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
                           <p><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" class="btn btn-white border border-4 fw-bold ">Learn more!</a></p>
                         </div>
